debian-installer (20051007) UNRELEASED; urgency=low

  [ Christian Perrier ]
  * Add the list of needed characters for Sanskrit

  [ Joey Hess ]
  * Back to building with udebs from etch.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Oct 2005 11:29:37 -0400

debian-installer (20051006) unstable; urgency=low

  [ Bdale Garbee ]
  * patch from Richard Hirst to fix ramdisk size on hppa

  [ Colin Watson ]
  * Revert addition of real alternatives for virtual glibc-pic
    build-dependency, since it apparently confuses sbuild on architectures
    without libc6-pic.

 -- Joey Hess <joeyh@debian.org>  Thu,  6 Oct 2005 15:37:13 -0400

debian-installer (20051005) unstable; urgency=low

  [ Bdale Garbee ]
  * updates for hppa support of 2.6.12 kernels

  [ Sylvain Ferriol ]
  * When ONLINE=n, APT must not cleanup lists directory.

  [ Joey Hess ]
  * Add preseed-common to all initrds, split out from file/network-preseed.
  * Add initrd-preseed too.
  * Add a PRESEED variable, which can be used to specify a preseed file to
    add to the initrd in the location initrd-preseed expects to find one
    (/preseed.cfg).
  * Default PRESEED to unstable.cfg, which sets mirror/udeb/suite, which
    means that all d-i developmental and daily builds that download udebs
    will download them from unstable, not testing.
  * However, in release builds of the package, this is unset, so those will
    pull udebs from testing as previously.
  * Try adding root=/dev/fd0 to the silo.floppy.conf since at least the 2.4
    kernel floppies are reported to not boot without it. This change may
    also affect the 2.6 kernel floppies, which need to be tested.
    Closes: #301374
  * Make syslinux configs use "install" as the label to install, in
    preparation for rescue mode. "linux" continues to work for
    compatability.
  * Add "install24" and "expert24" labels to syslinux configs, in
    preparation for making i386 use 2.6 by default.