@@ -5,7 +5,7 @@ Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Alastair McKinstry <mckinstry@computer.org>, Joshua Kwan <joshk@triplehelix.org>
 Standards-Version: 3.6.2
 Build-Conflicts: libnewt-pic [mipsel]
-Build-Depends: debhelper (>= 4), apt, gnupg, dpkg (>= 1.13.9), grep-dctrl, bc, glibc-pic, libdebian-installer4 (>= 0.31), libdebconfclient0, libparted1.6-13, libslang2-pic, libnewt-pic [!mipsel], libdiscover1-pic [!s390 !s390x], libdiscover1 [!s390 !s390x], libbogl-dev, libtextwrap1, cramfsprogs [powerpc ia64 mips], genext2fs (>= 1.3-7.1), e2fsprogs, mklibs (>= 0.1.15), mkisofs, genromfs [sparc], hfsutils [powerpc], dosfstools [i386 ia64 m68k amd64], syslinux (>= 2.11-0.1) [i386 amd64], palo [hppa], elilo [ia64], yaboot [powerpc], aboot (>= 0.9b-2) [alpha], silo [sparc], sparc-utils [sparc], genisovh [mips], delo [mipsel], tip22 [mips], colo (>= 1.10-1) [mipsel], sibyl [mips mipsel], atari-bootstrap [m68k], vmelilo [m68k], m68k-vme-tftplilo [m68k], sysutils [i386 amd64], mtools (>= 3.9.9-1) [i386 ia64 m68k amd64], modutils, module-init-tools [i386 powerpc amd64 hppa ia64 sparc], bf-utf-source [!s390 !s390x], upx-ucl-beta (>= 1:1.91+0.20030910cvs-2) [i386], mkvmlinuz [powerpc], docbook, docbook-xml, docbook-xsl, xsltproc, gawk, w3m, poxml, jadetex, openjade | openjade1.3, docbook-dsssl, gs-common, debiandoc-sgml
+Build-Depends: debhelper (>= 4), apt, gnupg, dpkg (>= 1.13.9), grep-dctrl, bc, debiandoc-sgml, glibc-pic, libdebian-installer4 (>= 0.31), libdebconfclient0, libparted1.6-13, libslang2-pic, libnewt-pic [!mipsel], libdiscover1-pic [!s390 !s390x], libdiscover1 [!s390 !s390x], libbogl-dev, libtextwrap1, cramfsprogs [powerpc ia64 mips], genext2fs (>= 1.3-7.1), e2fsprogs, mklibs (>= 0.1.15), mkisofs, genromfs [sparc], hfsutils [powerpc], dosfstools [i386 ia64 m68k amd64], syslinux (>= 2.11-0.1) [i386 amd64], palo [hppa], elilo [ia64], yaboot [powerpc], aboot (>= 0.9b-2) [alpha], silo [sparc], sparc-utils [sparc], genisovh [mips], delo [mipsel], tip22 [mips], colo (>= 1.10-1) [mipsel], sibyl [mips mipsel], atari-bootstrap [m68k], vmelilo [m68k], m68k-vme-tftplilo [m68k], sysutils [i386 amd64], mtools (>= 3.9.9-1) [i386 ia64 m68k amd64], modutils, module-init-tools [i386 powerpc amd64 hppa ia64 sparc], bf-utf-source [!s390 !s390x], upx-ucl-beta (>= 1:1.91+0.20030910cvs-2) [i386], mkvmlinuz [powerpc]
 # This package has the worst Build-Depends in Debian, so it deserves some
 # explanation. Note that this comment can also be used to generate a
 # Build-Depends line, by running the debian/genbuilddeps program.
@@ -27,6 +27,8 @@ Build-Depends: debhelper (>= 4), apt, gnupg, dpkg (>= 1.13.9), grep-dctrl, bc, g
 #		Various manipulations of the udeb Packages files.
 #	- bc
 #		Used for some image size calculations.
+#	- debiandoc-sgml
+#		partman's manual is in debiandoc.
 #	
 # Library build dependencies:
 #	Libraries can come from three sources: From a udeb, from the build
@@ -144,38 +146,9 @@ Build-Depends: debhelper (>= 4), apt, gnupg, dpkg (>= 1.13.9), grep-dctrl, bc, g
 #	- mkvmlinuz [powerpc]
 #		Used to make powerpc images that can boot direct from
 #		firmware w/o using a boot loader.
-#
-# Build dependencies of the manual and docs:
-# 	Note that currently the debian-installer-manual package is used as the
-#	required deb-producing package so that the archive maintenance scripts
-#	work. So it is built on each architecture instead of being built once
-#	as an arch all package for all architectures, and its build
-#	dependencies are included in Build-Depends rather than in
-#	Build-Depends-Indep.
-#	- docbook
-#	- docbook-xml
-#	- docbook-xsl
-#	- xsltproc
-#		The manual is a docbook XML document, so needs these to
-#		build.
-#	- gawk
-#		Used as part of the manual build process.
-#	- w3m
-#		Used to generate plain text manual from html.
-#	- poxml
-#		Translations of the manual are done in po files via poxml.
-#	- jadetex
-#	- openjade | openjade1.3
-#	- docbook-dsssl
-#		Used for producing pdf and ps files.
-#	- gs-common
-#		For pdfs.
-#	- debiandoc-sgml
-#		partman's manual is in debiandoc.
 
-Package: debian-installer-manual
+Package: debian-installer
 Architecture: any
-Description: Debian installation manual
- This package contains the Debian installation manual, in a variety of
- languages. It also includes the installation HOWTO, and a variety of
- developer documentation for the Debian Installer.
+Description: Debian installer
+ This package currently contains only some documentation for the Debian
+ installer. We welcome suggests about what else to put in it.
